Add latest changes