@@ -1,20 +1,21 @@
 package com.knuddels.jtokkit.reference;
 
-import it.unimi.dsi.fastutil.ints.IntArrayList;
-import it.unimi.dsi.fastutil.ints.IntList;
+import com.knuddels.jtokkit.api.IntArrayList;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.List;
 
-public class TestUtils {
+class TestUtils {
 
-    public static IntList parseEncodingString(final String encodingString) {
-        var results = Arrays.stream(
+    static IntArrayList parseEncodingString(String encodingString) {
+        List<Integer> list = Arrays.stream(
                         encodingString.substring(1, encodingString.length() - 1)
                                 .replaceAll(" ", "")
                                 .split(",")
                 ).map(Integer::parseInt)
-                .collect(Collectors.toList());
-        return new IntArrayList(results);
+                .toList();
+        var result = new IntArrayList(list.size());
+        list.forEach(result::add);
+        return result;
     }
 }
